CSS alignment fixes.

--- a/style1.css
+++ b/style1.css
@@ -128,6 +128,7 @@ h2, .h2 {
 
 h3, .h3 {
   font-size: calc(1.3rem + 0.6vw);
+  margin-left: 50%;
 }
 @media (min-width: 1200px) {
   h3, .h3 {
@@ -149,10 +150,13 @@ h5, .h5 {
 }
 
 h6, .h6 {
+  margin-top:20px;
   font-size: 1rem;
+  margin-bottom:5px;
 }
 
 p {
+  margin-left: 50%;
   margin-top: 0;
   margin-bottom: 1rem;
 }
@@ -1379,7 +1383,7 @@ progress {
 
   .col-lg-4 {
     flex: 0 0 auto;
-    width: 50.0%;
+    width: 66.0%;
   }
 
   .col-lg-5 {
@@ -11305,7 +11309,7 @@ p {
 
 @media (min-width: 768px) {
   section {
-    padding: 9rem 0;
+    padding: 1rem 0;
   }
 }
 .btn-xl {
